other/enforce-readwriteonce-pod/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: readwriteonce-pod
status:
  ready: true
